cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(2085 2085.cpp)
add_executable(42 42.cc)
add_executable(2182 2182.cc)
add_executable(01bag 01bag.cc)
add_executable(83 83.cc)
add_executable(45 45.cc)
add_executable(82 82.cc)
add_executable(temp temp.cc)
add_executable(46 46.cc)
add_executable(2719 2719.cc)
add_executable(2744 2744.cc)
add_executable(55 55.cc)
add_executable(2171 2171.cc)
add_executable(2809 2809.cc)
add_executable(2788 2788.cc)
add_executable(670 670.cc)
add_executable(2765 2765.cc)
add_executable(2859 2859.cc)
add_executable(lcp24 lcp24.cc)
add_executable(1686 1686.cc)
