cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(2085 src/2085.cpp)
add_executable(42 src/42.cc)
add_executable(2182 src/2182.cc)
add_executable(01bag src/01bag.cc)
add_executable(83 src/83.cc)
add_executable(45 src/45.cc)
add_executable(82 src/82.cc)
add_executable(temp src/temp.cc)
add_executable(46 src/46.cc)
add_executable(2719 src/2719.cc)
add_executable(2744 src/2744.cc)
add_executable(55 src/55.cc)
add_executable(2171 src/2171.cc)
add_executable(2809 src/2809.cc)
add_executable(2788 src/2788.cc)
add_executable(670 src/670.cc)
add_executable(2765 src/2765.cc)
add_executable(2859 src/2859.cc)
add_executable(lcp24 src/lcp24.cc)
add_executable(1686 src/1686.cc)
add_executable(1696 src/1696.cc)
add_executable(lcp30 src/lcp30.cc)
add_executable(2641 src/2641.cc)
add_executable(993 src/993.cc)
add_executable(236 src/236.cc)
add_executable(94 src/94.cc)
add_executable(144 src/144.cc)
add_executable(145 src/145.cc)
add_executable(987 src/987.cc)
