cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(2085 src/2085.cpp)
add_executable(42 src/42.cc)
add_executable(2182 src/2182.cc)
add_executable(01bag src/01bag.cc)
add_executable(83 src/83.cc)
add_executable(45 src/45.cc)
add_executable(82 src/82.cc)
add_executable(temp src/temp.cc)
add_executable(46 src/46.cc)
add_executable(2719 src/2719.cc)
add_executable(2744 src/2744.cc)
add_executable(55 src/55.cc)
add_executable(2171 src/2171.cc)
add_executable(2809 src/2809.cc)
add_executable(2788 src/2788.cc)
add_executable(670 src/670.cc)
add_executable(2765 src/2765.cc)
add_executable(2859 src/2859.cc)
add_executable(lcp24 src/lcp24.cc)
add_executable(1686 src/1686.cc)
add_executable(1696 src/1696.cc)
add_executable(lcp30 src/lcp30.cc)
add_executable(2641 src/2641.cc)
add_executable(993 src/993.cc)
add_executable(236 src/236.cc)
add_executable(94 src/94.cc)
add_executable(144 src/144.cc)
add_executable(145 src/145.cc)
add_executable(987 src/987.cc)
add_executable(102 src/102.cc)
add_executable(107 src/107.cc)
add_executable(103 src/103.cc)
add_executable(bm1 src/bm1.cc)
add_executable(2834 src/2834.cc)
add_executable(bm4 src/bm4.cc)
add_executable(299 src/299.cc)
add_executable(2789 src/2789.cc)
add_executable(2312 src/2312.cc)
add_executable(2684 src/2684.cc)
add_executable(310 src/310.cc)
add_executable(1793 src/1793.cc)
add_executable(2580 src/2580.cc)
add_executable(2908 src/2908.cc)
add_executable(2810 src/2810.cc)
add_executable(2007 src/2007.cc)
add_executable(1052 src/1052.cc)
add_executable(2385 src/2385.cc)
add_executable(2739 src/2739.cc)
add_executable(1491 src/1491.cc)
add_executable(2079 src/2079.cc)
add_executable(994 src/994.cc)
add_executable(2644 src/2644.cc)
add_executable(1535 src/1535.cc)
add_executable(2225 src/2225.cc)
add_executable(419 src/419.cc)
add_executable(2779 src/2779.cc)
add_executable(1958 src/1958.cc)   
add_executable(724 src/724.cc)
add_executable(2970 src/2970.cc)
add_executable(2708 src/2708.cc)
add_executable(2848 src/2848.cc)
add_executable(997 src/997.cc)
